--- a/nearby_search_golf.html
+++ b/nearby_search_golf.html
@@ -267,7 +267,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 		<p> Other available locations: 
 		<br> <a href='http://ikanez.github.io/nearby_search_lrt.html'> Putra LRT in KL and Selangor </a>
 		<br> <a href='http://ikanez.github.io/nearby_search_golf.html'> Golf Courses in KL and Selangor </a>
-		<br> <a href='http://ikanez.github.io/maps/nearby_search_malls.html'> Shopping Malls in KL and Selangor </a>
+		<br> <a href='http://ikanez.github.io/nearby_search_malls.html'> Shopping Malls in KL and Selangor </a>
 		<p>
 		</h4>
 		
