--- a/data_extraction_r.html
+++ b/data_extraction_r.html
@@ -163,58 +163,58 @@ tables[[which.max(n.rows)]]</code></pre>
 ## 51 Wilayah Persekutuan                       Labuan              32*
 ## 52 Wilayah Persekutuan                    Putrajaya              48*
 ##    MASA/TIME01:00AM MASA/TIME02:00AM MASA/TIME03:00AM MASA/TIME04:00AM
-## 1                                                                     
-## 2                                                                     
-## 3                                                                     
-## 4                                                                     
-## 5                                                                     
-## 6                                                                     
-## 7                                                                     
-## 8                                                                     
-## 9                                                                     
-## 10                                                                    
-## 11                                                                    
-## 12                                                                    
-## 13                                                                    
-## 14                                                                    
-## 15                                                                    
-## 16                                                                    
-## 17                                                                    
-## 18                                                                    
-## 19                                                                    
-## 20                                                                    
-## 21                                                                    
-## 22                                                                    
-## 23                                                                    
-## 24                                                                    
-## 25                                                                    
-## 26                                                                    
-## 27                                                                    
-## 28                                                                    
-## 29                                                                    
-## 30                                                                    
-## 31                                                                    
-## 32                                                                    
-## 33                                                                    
-## 34                                                                    
-## 35                                                                    
-## 36                                                                    
-## 37                                                                    
-## 38                                                                    
-## 39                                                                    
-## 40                                                                    
-## 41                                                                    
-## 42                                                                    
-## 43                                                                    
-## 44                                                                    
-## 45                                                                    
-## 46                                                                    
-## 47                                                                    
-## 48                                                                    
-## 49                                                                    
-## 50                                                                    
-## 51                                                                    
-## 52                                                                    
+## 1               25*                                                   
+## 2               47*                                                   
+## 3               49*                                                   
+## 4               59*                                                   
+## 5               30*                                                   
+## 6               50*                                                   
+## 7               35*                                                   
+## 8               40*                                                   
+## 9               22*                                                   
+## 10              42*                                                   
+## 11              44*                                                   
+## 12              54*                                                   
+## 13              34*                                                   
+## 14              36*                                                   
+## 15              43*                                                   
+## 16              38*                                                   
+## 17              58*                                                   
+## 18              41*                                                   
+## 19              20*                                                   
+## 20              37*                                                   
+## 21              35*                                                   
+## 22              16*                                                   
+## 23              29*                                                   
+## 24              23*                                                   
+## 25              50*                                                   
+## 26              37*                                                   
+## 27              28*                                                   
+## 28              25*                                                   
+## 29              26*                                                   
+## 30              46*                                                   
+## 31              57*                                                   
+## 32              25*                                                   
+## 33              32*                                                   
+## 34              54*                                                   
+## 35              25*                                                   
+## 36              26*                                                   
+## 37              62*                                                   
+## 38              50*                                                   
+## 39              52*                                                   
+## 40              49*                                                   
+## 41              53*                                                   
+## 42              39*                                                   
+## 43              57*                                                   
+## 44              51*                                                   
+## 45              54*                                                   
+## 46              55*                                                   
+## 47              39*                                                   
+## 48              44*                                                   
+## 49              53*                                                   
+## 50              48*                                                   
+## 51              32*                                                   
+## 52              48*                                                   
 ##    MASA/TIME05:00AM
 ## 1                  
 ## 2                  
@@ -268,7 +268,10 @@ tables[[which.max(n.rows)]]</code></pre>
 ## 50                 
 ## 51                 
 ## 52</code></pre>
-<p>To be continued with other data sources…</p>
+<p>Other live data sources:</p>
+<p>Daily rainfall : <code>http://www.met.gov.my/index.php?option=com_weathertimeseries&amp;purpose=rainfall&amp;Itemid=589</code></p>
+<p>Daily temperature: <code>http://www.met.gov.my/index.php?option=com_weathertimeseries&amp;purpose=minmax&amp;Itemid=908</code></p>
+<p>Hourly visibility: <code>http://www.met.gov.my/index.php?option=com_weathertimeseries&amp;purpose=visibility&amp;Itemid=547</code></p>
 
 
 </div>
