--- a/gdp_slide.html
+++ b/gdp_slide.html
@@ -30,6 +30,6 @@
 <!-- original
 <iframe id="presentFrame" src="https://docs.google.com/presentation/d/1I5P8MxsLHdxzOYNahEfH5egU91IJrAGprFo0melj4H0/embed?start=true&loop=true&delayms=4000" frameborder="0" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> 
 -->
-<iframe id="presentFrame" src="https://docs.google.com/presentation/d/e/2PACX-1vRnS1h7aweoe0QNscXewbiz_gt2rMw22Z8Ps39hOlsTV2OHKtLGDCaDT4D4WrfOCcMafsk7XSm4ouIo/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRnS1h7aweoe0QNscXewbiz_gt2rMw22Z8Ps39hOlsTV2OHKtLGDCaDT4D4WrfOCcMafsk7XSm4ouIo/embed?start=true&loop=true&delayms=3000" frameborder="0" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </body>
 </html>
