--- a/gdpslide.html
+++ b/gdpslide.html
@@ -13,7 +13,7 @@
 	</style>
 	<script>
 		// update with the desired time to refresh the presentation (in minutes)
-		var refreshMinutes = 0.5;
+		var refreshMinutes = 3;
 		
 		var timer=setInterval(function(){refreshFrame()}, refreshMinutes*60*1000);
 		function refreshFrame()
@@ -30,6 +30,7 @@
 <!-- original
 <iframe id="presentFrame" src="https://docs.google.com/presentation/d/1I5P8MxsLHdxzOYNahEfH5egU91IJrAGprFo0melj4H0/embed?start=true&loop=true&delayms=4000" frameborder="0" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> 
 -->
-<iframe id="presentFrame" src="https://docs.google.com/presentation/d/e/2PACX-1vRnS1h7aweoe0QNscXewbiz_gt2rMw22Z8Ps39hOlsTV2OHKtLGDCaDT4D4WrfOCcMafsk7XSm4ouIo/embed?start=true&loop=true&delayms=3000" frameborder="0"  width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</body>
+<iframe id="presentFrame"  src="https://docs.google.com/presentation/d/e/2PACX-1vR6ldLf1cYLKijaPd1wiG7-qCJzxmRChm2Yx121120IjdS7MS9kZMOOiRUGOC2DS2J_JKLdqbFjtzt3/embed?start=true&loop=true&delayms=10000" frameborder="0" width="100%" height="100% allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	
+	</body>
 </html>
